--- a/threaddump/simulateiocongestion/build.gradle
+++ b/threaddump/simulateiocongestion/build.gradle
@@ -9,6 +9,11 @@ repositories {
     mavenCentral()
 }
 
+compileJava {
+    sourceCompatibility('11')
+    targetCompatibility('11')
+}
+
 dependencies {
     implementation 'net.smacke:jaydio:0.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
