--- a/threaddump/simulateiocongestion/build.gradle
+++ b/threaddump/simulateiocongestion/build.gradle
@@ -14,6 +14,10 @@ compileJava {
     targetCompatibility('11')
 }
 
+jar {
+    enabled = true
+}
+
 dependencies {
     implementation 'net.smacke:jaydio:0.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
