Install ps and trace command

--- a/threaddump/simulateiocongestion/Dockerfile
+++ b/threaddump/simulateiocongestion/Dockerfile
@@ -4,3 +4,5 @@ RUN mkdir /app
 WORKDIR /app
 COPY /build/libs/simulateiocongestion-1.0.0-SNAPSHOT.jar /app
 COPY output-onlinefiletools.txt /app
+RUN apt-get update && apt-get install -y procps
+RUN apt-get install strace -y
