--- a/threaddump/simulateconnectionpooldeadlock/build.gradle
+++ b/threaddump/simulateconnectionpooldeadlock/build.gradle
@@ -15,6 +15,9 @@ compileJava {
 }
 
 dependencies {
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+    implementation 'com.google.guava:guava:30.1.1-jre'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
