--- a/threaddump/simulateconnectionpooldeadlock/build.gradle
+++ b/threaddump/simulateconnectionpooldeadlock/build.gradle
@@ -18,6 +18,9 @@ dependencies {
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     implementation 'com.google.guava:guava:30.1.1-jre'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.4'
+    implementation 'log4j:log4j:1.2.17'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
