--- a/threaddump/simulatecpuboundthread/build.gradle
+++ b/threaddump/simulatecpuboundthread/build.gradle
@@ -14,6 +14,16 @@ compileJava {
     targetCompatibility('11')
 }
 
+jar {
+    enabled = true
+    manifest {
+        attributes 'Main-Class': 'io.github.bluething.java.threaddump.simulatecpuboundthread.CatastrophicBacktrackingRegex'
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
