--- a/threaddump/simulateconnectionpooldeadlock/build.gradle
+++ b/threaddump/simulateconnectionpooldeadlock/build.gradle
@@ -14,6 +14,16 @@ compileJava {
     targetCompatibility('11')
 }
 
+jar {
+    enabled = true
+    manifest {
+        attributes 'Main-Class': 'io.github.bluething.java.threaddump.simulateconnectionpooldeadlock.auth.BearerAuthenticator'
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 dependencies {
     implementation 'org.apache.httpcomponents:httpclient:4.5.13'
     implementation 'com.google.guava:guava:30.1.1-jre'
