--- a/heapdump/klassified/build.gradle
+++ b/heapdump/klassified/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id "com.github.johnrengelman.shadow" version "6.1.0"
 }
 
 group 'io.github.bluething.java'
@@ -14,13 +15,10 @@ compileJava {
     targetCompatibility('11')
 }
 
-jar {
-    enabled = true
+shadowJar {
+    mergeServiceFiles()
     manifest {
         attributes 'Main-Class': 'io.github.bluething.java.heapdump.klassified.KlassifiedApplication'
-    }
-    from {
-        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
 
